# Kumoh_SE_Mentoring_Bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  SE_mentorbot_주제제안서_v1.2.pptx  compose.yaml  pyproject.toml
.github/workflows/: quality.yml
backend/: Dockerfile  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  categories.py  chunking.py  config.py  context_compressor.py  data_audit.py  domain.py  evaluation.py  evidence_policy.py  freshness.py  freshness_selector.py  hybrid_retriever.py  index_manifest.py  intent_analysis.py  lexical_retriever.py  local_service.py  main.py  openai_service.py  provider_factory.py  query_intent.py  query_planner.py  rag.py  recommendations.py  relevance_gate.py  reporting.py  request_evidence.py  reranker.py  schemas.py  storage.py  topic_classifier.py  topic_rules.py  vector_store.py
backend/scripts/: __init__.py  audit_data.py  crawl.py  evaluate.py  index.py
backend/tests/: test_audit_data_script.py  test_chunking.py  test_config.py  test_context_compressor.py  test_crawl_script.py  test_data_audit.py  test_deployment_config.py  test_evaluate_script.py  test_evaluation.py  test_evaluation_dataset.py  test_evidence_policy.py  test_freshness.py  test_freshness_selector.py  test_main.py  (+22 more)
data/: topic_rules.json
docs/: HANDOFF.md  PROJECT_STATUS.md  RAG_ARCHITECTURE.md  rag-chatbot-design.md
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
tests/: test_api.py  test_chroma_vector_store.py  test_document_loader.py  test_rag_service.py
(+65 files in other folders)
