[project]
name = "department-rag-chatbot"
version = "0.1.0"
description = "RAG chatbot foundation for department introduction and mentoring"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.115.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
